--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "chart.js": "^4.3.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "firebase": "^10.2.0",
     "next": "13.4.13",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
